--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "symfony/polyfill-mbstring": "^1.2"
   },
   "require-dev": {
-    "codeception/codeception": "^3.0"
+    "codeception/codeception": "^2.0|^3.0"
   },
   "autoload": {
     "psr-4": {
