--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
     "psr-4": {
       "S2\\Rose\\": "src/S2/Rose"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "S2\\Rose\\Test\\": "tests/unit/Rose"
+    }
   }
 }
