--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "symfony/polyfill-mbstring": "^1.2"
   },
   "require-dev": {
-    "codeception/codeception": "^2.0|^3.0"
+    "codeception/codeception": "^2.0|^3.0|^4.0",
+    "codeception/module-asserts": "^1.3"
   },
   "autoload": {
     "psr-4": {
