--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,15 @@
   "authors": [
     {
       "name": "Roman Parpalak",
-      "email": "roman@written.ru"
+      "email": "roman@parpalak.com"
     }
   ],
   "license": "MIT",
   "require": {
-    "php": ">=5.6",
-    "symfony/polyfill-mbstring": "^1.2"
+    "php": ">=7.4",
+    "ext-dom": "*",
+    "symfony/polyfill-mbstring": "^1.2",
+    "psr/log": "^1.1"
   },
   "require-dev": {
     "codeception/codeception": "^2.0|^3.0|^4.0",
