--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "require": {
     "php": ">=7.4",
-    "ext-dom": "*",
     "ext-json": "*",
     "symfony/polyfill-mbstring": "^1.2",
     "psr/log": "^1.1"
@@ -18,6 +17,9 @@
   "require-dev": {
     "codeception/codeception": "^2.0|^3.0|^4.0",
     "codeception/module-asserts": "^1.3"
+  },
+  "suggest": {
+    "ext-dom": "*"
   },
   "autoload": {
     "psr-4": {
