--- a/.github/workflows/test_mysql.yml
+++ b/.github/workflows/test_mysql.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Test on MySQL
 
 on: [ push ]
 
@@ -22,21 +22,28 @@ jobs:
           - 'mariadb-10.7'
           - 'mariadb-10.8'
           - 'mariadb-10.9'
+          - 'mariadb-10.10'
+          - 'mariadb-10.11'
+          - 'mariadb-11.0'
+          - 'mariadb-11.1'
           - '5.7'
           - '8.0'
+          - '8.1'
         php_versions:
           - '7.4'
-          - '8.0'
-          - '8.1'
         include:
           -
-            operating_system: 'ubuntu-22.04'
-            php_versions: 8.1
+            operating_system: 'ubuntu-20.04'
+            php_versions: 8.0
             mysql_versions: 'mariadb-10.7'
           -
             operating_system: 'ubuntu-22.04'
-            php_versions: 8.2
+            php_versions: 8.1
             mysql_versions: '8.0'
+          -
+            operating_system: 'ubuntu-22.04'
+            php_versions: 8.2
+            mysql_versions: '8.1'
 
     runs-on: '${{ matrix.operating_system }}'
 
@@ -61,7 +68,7 @@ jobs:
         run: COMPOSER_MEMORY_LIMIT=-1 composer install --prefer-dist --no-interaction
 
       - name: Prepare config
-        run: cp tests/config.php.dist tests/config.php
+        run: cp tests/config.php.dist.mysql tests/config.php
 
       - name: Run test cases
         run: php bin/codecept run --skip-group profile
