--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "codeception/module-asserts": "^1.3"
   },
   "suggest": {
-    "ext-dom": "*"
+    "ext-dom": "*",
+    "ext-pdo": "*"
   },
   "autoload": {
     "psr-4": {
