--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "psr/log": "^1.1"
   },
   "require-dev": {
-    "codeception/codeception": "^2.0|^3.0|^4.0",
+    "codeception/codeception": "^4.2",
     "codeception/module-asserts": "^1.3"
   },
   "suggest": {
