Implemented SQLite support.

--- a/.github/workflows/test_sqlite.yml
+++ b/.github/workflows/test_sqlite.yml
@@ -1,4 +1,4 @@
-name: Test on PostgreSQL
+name: Test on SQLite
 
 on: [ push ]
 
@@ -7,20 +7,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating_system: ['ubuntu-22.04']
+        operating_system:
+          - 'ubuntu-22.04'
         php_versions:
+          - '7.4'
+          - '8.0'
+          - '8.1'
           - '8.2'
 
     runs-on: '${{ matrix.operating_system }}'
 
     steps:
       - uses: actions/checkout@v3
-      - uses: ikalnytskyi/action-setup-postgres@v4
-        with:
-          username: postgres
-          password: 12345
-          database: s2_rose_test
-          port: 5432
 
       - name: 'Setup PHP'
         uses: shivammathur/setup-php@v2
@@ -31,7 +29,7 @@ jobs:
         run: COMPOSER_MEMORY_LIMIT=-1 composer install --prefer-dist --no-interaction
 
       - name: Prepare config
-        run: cp tests/config.php.dist.postgres tests/config.php
+        run: cp tests/config.php.dist.sqlite tests/config.php
 
       - name: Run test cases
         run: php bin/codecept run --skip-group profile
