Moved titles and keywords to fulltext index (relates to #24).

--- a/.github/workflows/test_mysql.yml
+++ b/.github/workflows/test_mysql.yml
@@ -74,4 +74,5 @@ jobs:
         run: php bin/codecept run --skip-group profile
 
       - name: Run profiling
+        if: success() || failure()
         run: php bin/codecept run -g profile -d
