--- a/.github/workflows/test_postgres.yml
+++ b/.github/workflows/test_postgres.yml
@@ -37,4 +37,5 @@ jobs:
         run: php bin/codecept run --skip-group profile
 
       - name: Run profiling
+        if: success() || failure()
         run: php bin/codecept run -g profile -d
