--- a/.github/workflows/test_sqlite.yml
+++ b/.github/workflows/test_sqlite.yml
@@ -35,4 +35,5 @@ jobs:
         run: php bin/codecept run --skip-group profile
 
       - name: Run profiling
+        if: success() || failure()
         run: php bin/codecept run -g profile -d
