--- a/.github/workflows/test_mysql.yml
+++ b/.github/workflows/test_mysql.yml
@@ -44,14 +44,26 @@ jobs:
             operating_system: 'ubuntu-22.04'
             php_versions: 8.2
             mysql_versions: '8.1'
+#          - # TODO 11.4.3 has a problem with SSL certificates in github actions
+#            operating_system: 'ubuntu-22.04'
+#            php_versions: 8.2
+#            mysql_versions: 'mariadb-11.4'
           -
-            operating_system: 'ubuntu-22.04'
-            php_versions: 8.2
-            mysql_versions: 'mariadb-11.4'
-          -
-            operating_system: 'ubuntu-22.04'
+            operating_system: 'ubuntu-24.04'
             php_versions: 8.3
             mysql_versions: '8.2'
+          -
+            operating_system: 'ubuntu-24.04'
+            php_versions: 8.3
+            mysql_versions: '8.3'
+          -
+            operating_system: 'ubuntu-24.04'
+            php_versions: 8.3
+            mysql_versions: '8.4'
+          -
+            operating_system: 'ubuntu-24.04'
+            php_versions: 8.3
+            mysql_versions: '9.0'
 
     runs-on: '${{ matrix.operating_system }}'
 
